Aligned elements, added borders and fixed form issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,18 @@
 #game-board {
   margin: auto;
-  width: 300px;
-  height: 300px;
+  width: 390px;
+  height: 390px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  border: 5px solid black;
+  border: 8px solid black;
+  box-shadow: 5px 5px 30px black;
+  gap: 6px;
+  background-color: black;
+}
+
+.cells {
+  background-color: red;
 }
 
 html {
@@ -17,7 +24,7 @@ html {
 
 body {
   height: 100%;
-  padding: 1em 1em 1em 1em;
+  padding: 0em 1em 0em 1em;
   margin-top: 0px;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -25,6 +32,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 
 header {
@@ -70,13 +79,14 @@ button {
   background-color: black;
   border: none;
   color: white;
-  margin-top: 1em;
+  margin: 2em;
   padding: 0.75em 1.5em;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.2rem;
   cursor: pointer;
+  width: 200px;
   font-family: Arial, Helvetica, sans-serif;
   transition: transform 300ms ease-in-out;
   -webkit-transition: transform 300ms ease-in-out;
@@ -104,6 +114,19 @@ input::placeholder {
 
 select, input {
   width: 70%;
+  height: 60px;
+}
+
+input:invalid:focus, select:invalid:focus {
+  border-color: red;
+}
+
+input:focus, select:focus {
+  outline: none;
+}
+
+input:valid, select:valid {
+  border-color: green;
 }
 
 select:hover {
@@ -127,9 +150,10 @@ select:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 900px;
-  height: 600px;
+  width: 1300px;
+  height: 800px;
   border: 2px solid black;
+  margin-top: 1em;
 }
 
 footer {
@@ -152,10 +176,6 @@ footer p a:visited {
 }
 
 .shown {
-  display: block !important;
-}
-
-.shown-flex {
   display: flex !important;
 }
 
